# teton

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
src/teton/: __init__.py  utils.py
src/teton/videomae/: __init__.py  __main__.py  args.py
