[project]
name = "teton"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Lars Andersen Bratholm", email = "larsbratholm@gmail.com" }
]
packages = [
    { include = "teton", from = "src" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "numpy",
    "torch",
    "av",
    "transformers",
    "pillow>=11.2.1",
]

[project.optional-dependencies]
xpu = ["intel-extension-for-pytorch"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["bumpver", "pre-commit"]


[tool.ruff.lint]
# Add docstyle convensions
select = ["D", "I", "E4", "E7", "E9", "F"]
extend-safe-fixes = ["D415"]
ignore = [
"D200", # Disable condensing single-line docstrings
"D212", # Start docstring summary on second line (enables D213)
"D107", # Ignore init docstrings
"F722", # jaxtyping compability
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.mypy]
strict = true
implicit-reexport = true
ignore-missing-imports = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.bumpver]
version_pattern = "MAJOR.MINOR.PATCH"
current_version = "0.0.1"
[tool.bumpver.file_patterns]
"pyproject.toml" = ['^version = "{version}"$', 'current_version = "{version}"$']
"src/teton/__init__.py" = ['^__version__ = "{version}"$']
